--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,7 @@ packages = [{include = "hexlet_code"}]
 python = "^3.10"
 flask = "^3.0.2"
 gunicorn = "^21.2.0"
+python-dotenv = "^1.0.1"
 
 
 [tool.poetry.group.dev.dependencies]
